再出一个禁用 jemalloc 的镜像试试; fluentd es daemonset 可以被另一个工作流触发

--- a/.github/workflows/fluentd-kubernetes-daemonset-build.yml
+++ b/.github/workflows/fluentd-kubernetes-daemonset-build.yml
@@ -4,6 +4,10 @@ on:
   push:
     paths:
       - 'fluentd-es/kubernetes/arm64/debian-elasticsearch7/**'
+  workflow_run:
+    workflows: ["Build Fluentd Image"]
+    types:
+      - completed
 
 env:
   DOCKER_REGISTRY: docker.io/liuxincuit/fluentd-kubernetes-daemonset
