--- a/fluentd-es/kubernetes/arm64/debian-elasticsearch7/Dockerfile
+++ b/fluentd-es/kubernetes/arm64/debian-elasticsearch7/Dockerfile
@@ -55,5 +55,7 @@ COPY entrypoint.sh /fluentd/entrypoint.sh
 ENV FLUENTD_OPT=""
 ENV FLUENTD_CONF="fluent.conf"
 
+RUN chmod +x /bin/entrypoint.sh
+
 # Overwrite ENTRYPOINT to run fluentd as root for /var/log / /var/lib
 ENTRYPOINT ["tini", "--", "/fluentd/entrypoint.sh"]
