--- a/.github/workflows/fluentd-kubernetes-daemonset-build.yml
+++ b/.github/workflows/fluentd-kubernetes-daemonset-build.yml
@@ -31,6 +31,8 @@ jobs:
           provenance: false
           push: true
           platforms: linux/arm64
+          pull: true
+          no-cache: true
           tags: ${{ env.DOCKER_REGISTRY }}:v1.15.3-debian-elasticsearch7-1.2
           # dare to use old mediatype (application/vnd.docker.distribution.manifest.v2+json)
           outputs: oci-mediatypes=false
